--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "opilo/farsi",
   "description": "Farsi Tools for Dates and Numbers and Strings",
   "keywords": ["Jalali", "Shamsi", "Farsi", "Persian"],
+  "license": "MIT",
   "authors": [
     {
       "name": "Hamid Alaei V.",
