--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": ">=5.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*"
+    "phpunit/phpunit": "4.*",
+    "sallar/jdatetime": "dev-master"
   },
   "autoload": {
     "psr-4": {
