--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+
 php:
   - 5.4
   - 5.5.9
@@ -10,14 +11,22 @@ php:
 env:
   global:
     - brute_force=no
+    - setup=basic
 
 matrix:
   include:
     - php: hhvm
       env: brute_force=yes
+    - php: 5.6
+      env: setup=lowest
+    - php: 5.6
+      env: setup=stable
 
 install:
-  - composer install --no-interaction --prefer-source
+  - if [[ $setup = 'basic' ]]; then travis_retry composer install --no-interaction --prefer-source; fi
+  - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-stable; fi
+  - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-lowest --prefer-stable; fi
+
 script:
   - if [[ $brute_force = 'no' ]]; then vendor/bin/phpunit --exclude-group=brute_force; fi
   - if [[ $brute_force = 'yes' ]]; then vendor/bin/phpunit; fi
