test with php nightly and laravel 8.0

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "php": ">=7.1.0"
   },
   "require-dev": {
-    "illuminate/validation": "~5.7.0|~5.8.0|^6.0|^7.0",
-    "illuminate/translation": "~5.7.0|~5.8.0|^6.0|^7.0",
-    "illuminate/filesystem": "~5.7.0|~5.8.0|^6.0|^7.0",
+    "illuminate/validation": "~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
+    "illuminate/translation": "~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
+    "illuminate/filesystem": "~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
     "phpunit/phpunit": "^7.0|^8.0",
     "sallar/jdatetime": "dev-master"
   },
